--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "linguareef-utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Utility functions for the Linguareef project",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
