--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node ./dist/index.js",
     "watch": "tsc --watch",
     "prepare": "npm run build",
+    "prepack": "npm run prepare",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {},
