--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node ./dist/index.js",
     "watch": "tsc --watch",
     "prepare": "npm run build",
-    "prepack": "yarn prepare",
+    "prepack": "yarn build",
+    "postinstall": "yarn build",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {},
