--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc",
     "start": "node ./dist/index.js",
     "watch": "tsc --watch",
-    "prepare": "npm run build",
-    "prepack": "yarn build",
+    "prepare": "yarn build",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {},
